# gbrainy

./: AUTHORS  ChangeLog  GTK3-TODO  MAINTAINERS  Makefile.am  NEWS  README  RELEASE-PROCESS  aclocal.m4  autogen.sh  configure.ac  configure.in  gbrainy.csproj  gbrainy.desktop.in  gbrainy.doap  gbrainy.sln
data/: ChangeLog  Makefile.am  games.xml  gbrainy.1  gbrainy.6  gbrainy.desktop.in  gbrainy.exe.config  gbrainy.pc  gbrainy.pc.in  verbal_analogies.xml
data/themes/: themes.xml
help/: Makefile.am  gbrainy.omf.in
help/C/: export.page  gametypes.page  history.page  index.page  introduction.page  newgame.page  pause.page  playing.page  preferences.page  results.page  score.page  scoring.page  times.page
help/af/: af.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fr/: fr.po
help/gl/: gl.po
help/hi/: hi.po
help/hu/: hu.po
help/it/: it.po
help/nl/: nl.po
help/pt_BR/: pt_BR.po
help/ro/: ro.po
help/ru/: ru.po
help/sl/: sl.po
help/sr/: sr.po
help/sr@latin/: sr@latin.po
src/: AboutDialog.cs  ArrayListIndicesRandom.cs  AssemblyInfo.cs.in  CairoContextEx.cs  CalculatioWhichNumber.cs  CalculationArithmetical.cs  CalculationFractions.cs  CalculationGreatestDivisor.cs  CalculationOperator.cs  CalculationTwoNumbers.cs  CalculationWhichNumber.cs  ChangeLog  ColorPalette.cs  CountDown.cs  CustomGameDialog.cs  Defines.cs  Defines.cs.in  DrawingHelpers.cs  Game.cs  GameDrawingArea.cs  GameManager.cs  GameOverDialog.cs  GameSession.cs  GameTips.cs  GameType.cs  GtkDialog.cs  Makefile  Makefile.am  Makefile.in  ManagePuzzles.cs  MathArithmetical.cs  MathGreaterDivisor.cs  MathOperator.cs  MathTwoNumbers.cs  MathWhichNumber.cs  Memory.cs  MemoryColouredFigures.cs  MemoryColouredText.cs  MemoryCountDots.cs  MemoryFigures.cs  (+54 more)
src/CalculationGames/: CalculationArithmetical.cs  CalculationAverage.cs  CalculationCloserFraction.cs  CalculationFractions.cs  CalculationGreatestDivisor.cs  CalculationOperator.cs  CalculationPrimes.cs  CalculationProportions.cs  CalculationRatio.cs  CalculationTwoNumbers.cs  CalculationWhichNumber.cs
src/Clients/Classical/: AssemblyInfo.cs.in  CommandLine.cs  Defines.cs.in  GtkSynchronize.cs  Makefile.am  MonoAddinsStrings.cs  SimpleLabel.cs  gbrainy.addin.xml  gbrainy.cs  gbrainy.csproj  gbrainy.glade  gbrainy.in  gbrainy.ui  mono-addins-strings.xml
src/Clients/WebForms/: AllGames.aspx  AllGames.aspx.cs  AllGames.aspx.designer.cs  AssemblyInfo.cs.in  Default.aspx  Default.aspx.cs  Default.aspx.designer.cs  Defines.cs  Download.aspx  Download.aspx.cs  Download.aspx.designer.cs  Finish.aspx  Finish.aspx.cs  Finish.aspx.designer.cs  Game.aspx  Game.aspx.cs  Game.aspx.designer.cs  GameImage.cs  GameImageAreaShape.cs  Global.asax  Global.asax.cs  Help.aspx  Help.aspx.cs  Help.aspx.designer.cs  LanguageSupport.cs  Logger.cs  Makefile.am  MasterPage.master  MasterPage.master.cs  MasterPage.master.designer.cs  README  Status.aspx  Status.aspx.cs  Status.aspx.designer.cs  TODO  TranslationsWeb.cs  WebForms.csproj  WebForms.sln  WebSession.cs  jscripts.js  (+3 more)
src/Core/: AssemblyInfo.cs.in  Core.csproj  Makefile.am  gbrainy.addin.xml
src/Core/Libraries/: CSharpCompiler.cs  CSharpCompilerStatic.cs  CSharpCompilerStaticDomainProxy.cs  CairoContext.cs  CairoContextEx.cs  GetText.cs  SVGImage.cs  TranslationsCatalog.cs
src/Core/Main/: ArrayListIndicesRandom.cs  CairoContextEx.cs  ColorPalette.cs  Defines.cs.in  Game.cs  GameAnswer.cs  GameAnswerCheckAttributes.cs  GameAnswerEventArgs.cs  GameDifficulty.cs  GameLocator.cs  GameManager.cs  GameSession.cs  GameSessionHistory.cs  GameSessionHistoryExtended.cs  GameSessionPlayList.cs  GameTips.cs  GameTypes.cs  IDrawRequest.cs  IDrawable.cs  IMouseEvent.cs  Memory.cs  PdfExporter.cs  PlayerHistory.cs  PlayerPersonalRecord.cs  Preferences.cs  PreferencesStorage.cs  Score.cs  Theme.cs  ThemeManager.cs  UpdateGameQuestionEventArgs.cs  UpdateUIStateEventArgs.cs
src/Core/Platform/: Unix.cs
src/Core/Toolkit/: Widget.cs  (+6 more)
src/Dialogs/: AboutDialog.cs  CustomGameDialog.cs  PlayerHistoryDialog.cs  PreferencesDialog.cs
src/Games/: AssemblyInfo.cs.in  GameList.cs  Games.csproj  Makefile.am
src/MemoryGames/: MemoryColouredFigures.cs  MemoryColouredText.cs  MemoryCountDots.cs  MemoryFacts.cs  MemoryFigures.cs  MemoryFiguresNumbers.cs  MemoryIndications.cs  MemoryNumbers.cs  MemoryWords.cs
src/PuzzleGames/: Puzzle3DCube.cs  PuzzleBalance.cs  PuzzleBuildTriangle.cs  PuzzleCirclesRectangle.cs  PuzzleClocks.cs  PuzzleCounting.cs  PuzzleCoverPercentage.cs  PuzzleCube.cs  PuzzleDivideCircle.cs  PuzzleEquation.cs  PuzzleExtraCircle.cs  PuzzleFigureLetter.cs  PuzzleFigurePattern.cs  PuzzleFigures.cs  PuzzleFourSided.cs  PuzzleHandshakes.cs  PuzzleLargerShape.cs  PuzzleLines.cs  PuzzleMatrixGroups.cs  PuzzleMatrixNumbers.cs  PuzzleMissingPiece.cs  PuzzleMissingSlice.cs  PuzzleMostInCommon.cs  PuzzleMoveFigure.cs  PuzzleNextFigure.cs  PuzzleNumericRelation.cs  PuzzleNumericSequence.cs  PuzzleOstracism.cs  PuzzlePencil.cs  PuzzlePeopleTable.cs  PuzzlePercentage.cs  PuzzleQuadrilaterals.cs  PuzzleSquareDots.cs  PuzzleSquareSheets.cs  PuzzleSquares.cs  PuzzleSquaresAndLetters.cs  PuzzleTetris.cs  PuzzleTimeNow.cs  PuzzleTriangles.cs  PuzzleTrianglesWithNumbers.cs
src/VerbalAnalogies/: Analogies.cs  AnalogiesFactory.cs  AnalogiesMultipleOptions.cs  AnalogiesPairOfWordsCompare.cs  AnalogiesPairOfWordsOptions.cs  AnalogiesQuestionAnswer.cs  Analogy.cs
tests/: Makefile.am  README  UnitTests.csproj  test_analogies.xml  test_games.xml
tests/Core/: AnalogiesFactoryTest.cs  GameAnswerTest.cs  GameManagerTest.cs  GameSessionPlayListTest.cs  GameSessionTest.cs  GameTest.cs  GameXmlFactoryTest.cs  PlayerHistoryTest.cs  PlayerPersonalRecordTest.cs  PreferencesTest.cs
tests/TestSupport/: UnitTestSupport.cs
tools/: Defines.cs.in  GameTemplate.cs  GameXmlGetString.cs  GameXmlGetStringTemplate.cs  GameXmlToAssembly.cs  GameXmlToGetString.cs  GamesStatistics.cs  Makefile.am  README  TranslationsChecker.cs
tools/GetTextParser/: CatalogParser.cs  StringEscaping.cs
(+185 files in other folders)
