include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = gbrainy
DOC_INCLUDES = legal.xml

DOC_FIGURES = \
	figures/all-games.png		\
	figures/logic-games.png		\
	figures/memory-games.png	\
	figures/gbrainy.png		\
	figures/math-games.png		\
	figures/verbal-games.png	


DOC_PAGES = \
	customgame.page	\ 
	gametypes.page	\
	license.page	\
	pause.page	\
	tips.page	\
	difficulty.page	\
	history.page	\
	multiplayer.page \
	score.page	\
	gameplay.page	\	
	index.page	\
	newgame.page	\
	times.page	\
	export.page

DOC_LINGUAS = af ca cs da de es fr gl hi hu nl ro sl sr sr@latin

dist-hook: doc-dist-hook
